Fixed a couple (hehe) of CheckStyle errors